# rfutils

./: README.md  setup.py  tk_test.py
colecole/: #colecole_gui_ttk.py#  .#colecole_gui_ttk.py  cole_cole_coeffs.py  cole_cole_scraper.py  colecole.py  colecole_gui.py  colecole_gui_ttk.py
colecole/test/: test_colecole.py
examples/: map_materials_vopgen.py
rfutils/colecole/: cole_cole_scraper.py  colecole.py  colecole_coeffs.py  colecole_gui.py
rfutils/emfield/: __init__.py  emfield.py
rfutils/material_mapper/: __init__.py  material.py  material_mapper.py  materials_db.py
rfutils/reports/: sar_report.py
rfutils/smatrix/: Cargo.toml  setup.py
rfutils/smatrix/src/: lib.rs  main.rs  smatrix_utils.rs
rfutils/touchstone/: channel_q.py  touch2mat.py
rfutils/visualization/: __init__.py  compare_s_parameters.py  gui_helpers.py  load_mask.py  plot_fields_mag.py  plot_fields_per_channel.py  plot_fields_shim.py  plot_mag_phases.py  plot_s_params_at_f.py  plot_sar.py  plot_sparameters.py  print_s_parameters.py
rfutils/vopgen/: __init__.py  check_vopgen.py  reorder_vopgen_channels.py  scale_fields.py
rfutils/xmat/: __init__.py  field_reader.py  field_reader_cst2019.py  xmat.py
test/: test_b1pm.py  test_field_reader.py  test_field_reader_cst2019.py  test_material_mapper.py  test_scale_fields.py  test_vizualization.py  test_xmat.py
test_data/: 8CH_ELdipole_commongnd-23cmCONE_notraps_cloneELDipole_6-30-2020.s8p  Duke_34y_V5_5mm_0_Duke_34y_V5_5mm.vmat  README.md  channel_map.txt  s_params_original.txt
