[package]
name = "smatrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
ndarray = "0.15.3"
numpy = "0.17.2"

[lib]
name = "smatrix"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "smatrix_main"
path = "src/bin/bin.rs"
